fix(CSS): fix overlapping and minors CSS issues

--- a/core/component_json/css/component_json.less
+++ b/core/component_json/css/component_json.less
@@ -33,7 +33,7 @@
 
 			justify-content: center;
 			max-height: var(--media_max_height);
-			min-height: var(--media_min_height);
+			min-height: calc(var(--media_min_height) + 1.5rem);
 
 			@media screen and (max-width: @width_break_point_1) {
 				min-height: unset;
