--- a/core/page/css/layout/layout.less
+++ b/core/page/css/layout/layout.less
@@ -164,7 +164,7 @@
 
 // component common definitions
 	.wrapper_component {
-		contain: layout;
+		contain: style; // Set as 'style' to prevent service autocomplete issues
 		position: relative;
 		margin: 0px;
 		padding: 0px;
@@ -289,6 +289,7 @@
 
 		// content_data
 		>.content_data {
+			contain: style; // Set as 'style' to prevent service autocomplete issues
 			color: @color_grey_4;
 			height: inherit;
 			display: flex;
@@ -366,7 +367,6 @@
 
 			// content data defaults
 			>.content_data {
-				contain: layout;
 				height: inherit;
 				max-height: inherit;
 
@@ -950,10 +950,14 @@
 
 // json_editor
 	.jse-main {
-
+		contain: content;
 		--jse-theme-color: @color_grey_8;
 		// resize: vertical;
 		overflow: auto;
+
+		.jse-menu {
+			padding-right: 4rem;
+		}
 
 	}//end .jse-main
 
