--- a/core/section/css/section.less
+++ b/core/section/css/section.less
@@ -47,6 +47,7 @@
 		}
 
 		>.inspector_container {
+			contain: contain;
 			overflow: auto;
 			height: 100%;
 			width: var(--inspector_width);
@@ -75,10 +76,11 @@
 		}//end .inspector_container
 
 		>.search_container {
-
+			contain: contain;
 		}
 
 		>.content_data {
+			contain: contain;
 			display: flex;
 			flex-wrap: wrap;
 			width: 100%;
