--- a/core/services/service_autocomplete/css/service_autocomplete.less
+++ b/core/services/service_autocomplete/css/service_autocomplete.less
@@ -19,7 +19,7 @@
 	width: calc(100% + 1px);
 	min-width: 25rem;
 	opacity: 0;
-	transition: opacity 0.1s ease-in-out;
+	transition: opacity 0.08s ease-in-out;
 	z-index: 1;
 
 	&.search {
